--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,17 +28,18 @@
         </nav>
     </header>
 
-    <section id="login">
+    <section id="log">
         <h2>Log In</h2>
-        <form method="post">
+        <form id="login" method="post">
             <label for="email">E-mail</label>
             <input type="email" name="email" id="email">
-            <label for="Mot de passe">Mot de passe</label>
-            <input type="password" name="Mot de passe" id="password">
+            <label for="password">Mot de passe</label>
+            <input type="password" name="mot de passe" id="password">
             <input type="submit" value="Se connecter">
             <a href="#">Mot de passe oublié</a>
         </form>
     </section>
+    
 
     <footer>
         <nav>
