Delete works modale 1

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -125,7 +125,7 @@
 							</select>
 						</div>
 						<hr>
-						<button id="button_validate" class="submit_button2" disabled>Valider</button>
+						<button class="submit_button2" disabled>Valider</button>
 					</form>
 				</div>
 
